[package]
name = "cpchain-rust-sdk"
version = "0.1.17"
edition = "2021"
homepage = "https://cpchain.io"
repository = "https://github.com/cpchain/cpchain-rust-sdk"
license = "Apache-2.0"
description = "Rust SDK for CPChain Ecosystem"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
]

[features]
default = ["web3"]
web3 = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headers = "0.3.8"
hex = "0.4.3"
jsonrpc-core = "18.0.0"
log = "0.4.17"
reqwest = "0.11.13"
secp256k1 = { version = "0.21", features = ["rand-std", "recovery"] }
serde_json = "1.0.89"
tokio = "1.21.2"
url = "2.3.1"
web3 = {version="0.18.0"}
cpc-bip39 = {version="0.1.0", path="./bip39"}
hmac = {version="0.12.1", features=["std", "reset"]}
sha2 = "0.10.6"
regex = "1.7.0"
hex-literal = "0.3.4"
num-bigint = "0.4.3"
elliptic-curve = {version="0.12.3", features=["arithmetic"]}
serde = { version = "1.0.150", features = ["derive", "std"] }
pbkdf2 = "0.11.0"
rand_core = "0.6.4"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
rand = "0.8.5"
scrypt = {version="0.10.0", default-features = false}
aes = "0.8.2"
ctr = "0.9.2"
rlp = "0.5.2"
primitive-types = { version = "0.12.1", features = ["scale-info", "serde"] }
